--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -118,6 +118,42 @@
                 </div>
 
             </div>
+
+            <div class="cancha">
+                <img src="imagnes/canchasAbiertas.jpg" width="30%" alt="Cancha de Padel 3" />
+                <div class="cancha-info">
+
+                    <h2 href="#"><b>Cancha Boss Padel</b></h2>
+
+                    <p>
+                        
+                        Boss Padel es un complejo deportivo de pádel en Montevideo, Uruguay. 
+                        Ofrece canchas de pádel de alta calidad para jugadores de todos los niveles. 
+                        Además, cuenta con servicios como alquiler de equipos, 
+                        clases con entrenadores profesionales y organización de torneos. 
+                        También dispone de una tienda especializada y una cafetería para relajarse después de los partidos. 
+                        Boss Padel es el lugar ideal para los amantes del pádel en Montevideo, 
+                        proporcionando una experiencia deportiva completa y de primer nivel.
+                    </p>
+                    <br>
+                    <br>
+                    <a style="font-size: 19px;"><b>Precio:</b></a>
+                    <a class="p-cancha1" style="text-decoration-line: none;"> $2400</a>
+                    <br>
+                    <br>
+                    <a style="font-size: 19px;"><b>Zona:</b></a>
+                    <a class="u-cancha1" style="text-decoration-line: none;">Av. Liber Arce, 15800 Ciudad de la Costa</a>
+                    <br>
+                    <br>
+
+
+                    <nav>
+                        <button onclick="seleccionarCancha('Reducto Padel Center')">Reserva de Cancha</button>
+                    </nav>
+
+                </div>
+
+            </div>
         </section>
 
         <section id="reserva" style="display: flex;">
