--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva de Canchas de Padel</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -38,7 +39,7 @@
                     <div class="row">
                         <div class="col-md-6 mb-4">
                             <div class="card">
-                                <img src="imagenes/CHR_6337.jpg" class="card-img-top" alt="Cancha de Padel 1">
+                                <img src="imagnes/CHR_6337.jpg" class="card-img-top" alt="Cancha de Padel 1">
                                 <div class="card-body">
                                     <h5 class="card-title">World Padel Center Montevideo</h5>
                                     <p class="card-text">El World Padel Center Montevideo es un complejo deportivo
@@ -59,7 +60,7 @@
                         </div>
                         <div class="col-md-6 mb-4">
                             <div class="card">
-                                <img src="imagenes/20190406_195247.jpg" class="card-img-top" alt="Cancha de Padel 2">
+                                <img src="imagnes/20190406_195247.jpg" class="card-img-top" alt="Cancha de Padel 2">
                                 <div class="card-body">
                                     <h5 class="card-title">Indoor Padel Montevideo</h5>
                                     <p class="card-text">Indoor Padel Montevideo es un complejo deportivo en Montevideo,
@@ -79,7 +80,64 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Repeat for other canchas... -->
+                        <div class="col-md-6 mb-4">
+                            <div class="card">
+                                <img src="imagnes/imagen-Reducto-Padel-Center.webp" class="card-img-top" alt="Cancha de Padel 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Reducto Padel Center</h5>
+                                    <p class="card-text"> Reducto Padel Center es un complejo deportivo de pádel en Montevideo, Uruguay. Ofrece canchas de
+                                        pádel de calidad para jugadores de todos los niveles. Además, cuenta con servicios como alquiler
+                                        de equipos, clases con entrenadores y organización de torneos. Es un lugar ideal para los
+                                        amantes del pádel en la ciudad.</p>
+                                    <p><strong>Precio:</strong> $1900</p>
+                                    <p><strong>Zona:</strong> Dr. Alfredo García Morales 1320</p>
+                                    <button class="btn btn-primary"
+                                        onclick="seleccionarCancha('Reducto Padel Center')">Reserva de
+                                        Cancha</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                            <div class="card">
+                                <img src="imagnes/canchasAbiertas.jpg" class="card-img-top" alt="Cancha de Padel 4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Cancha Boss Padel</h5>
+                                    <p class="card-text">Boss Padel es un complejo deportivo de pádel en Montevideo, Uruguay.
+                                        Ofrece canchas de pádel de alta calidad para jugadores de todos los niveles.
+                                        Además, cuenta con servicios como alquiler de equipos,
+                                        clases con entrenadores profesionales y organización de torneos.
+                                        También dispone de una tienda especializada y una cafetería para relajarse después de los
+                                        partidos.
+                                        Boss Padel es el lugar ideal para los amantes del pádel en Montevideo,
+                                        proporcionando una experiencia deportiva completa y de primer nivel.</p>
+                                    <p><strong>Precio:</strong> $2400</p>
+                                    <p><strong>Zona:</strong> Av. Liber Arce, 15800 Ciudad de la
+                                        Costa</p>
+                                    <button class="btn btn-primary"
+                                        onclick="seleccionarCancha('Cancha Boss Padel')">Reserva de
+                                        Cancha</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                            <div class="card">
+                                <img src="imagnes/2024-04-13.png" class="card-img-top" alt="Cancha de Padel 5">
+                                <div class="card-body">
+                                    <h5 class="card-title">Lagomar Padel Club</h5>
+                                    <p class="card-text">Lagomar Padel Club ofrece instalaciones de primer nivel para la práctica del pádel, incluyendo
+                                        canchas de última generación y un ambiente amigable. Además, organizan torneos y eventos para
+                                        jugadores de todos los niveles, cuentan con clases y entrenamiento personalizado, y disponen de
+                                        una tienda con equipamiento y accesorios. El club también ofrece servicios de alquiler de
+                                        canchas y facilidades para socios.</p>
+                                    <p><strong>Precio:</strong> $2200</p>
+                                    <p><strong>Zona:</strong>Av. del Country, 15000 Ciudad de la
+                                        Costa</p>
+                                    <button class="btn btn-primary"
+                                        onclick="seleccionarCancha('Lagomar Padel Club')">Reserva de
+                                        Cancha</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -91,7 +149,7 @@
                         <h2>Reserva de Cancha</h2>
                         <form id="reserva-form">
                             <div class="mb-3">
-                                <label for="cancha" class="form-label">Cancha:</label>
+                                <label for="cancha" class="form-label" >Cancha:</label>
                                 <select id="cancha" name="cancha" class="form-select" required>
                                     <option value="World Padel Center Montevideo">World Padel Center Montevideo</option>
                                     <option value="Indoor Padel Montevideo">Indoor Padel Montevideo</option>
@@ -178,7 +236,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <script src="main.js" type="module"></script>
+
 </body>
 
 </html>
