agrego la 6 cancha

--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -82,12 +82,16 @@
                         </div>
                         <div class="col-md-6 mb-4">
                             <div class="card">
-                                <img src="imagnes/imagen-Reducto-Padel-Center.webp" class="card-img-top" alt="Cancha de Padel 3">
+                                <img src="imagnes/imagen-Reducto-Padel-Center.webp" class="card-img-top"
+                                    alt="Cancha de Padel 3">
                                 <div class="card-body">
                                     <h5 class="card-title">Reducto Padel Center</h5>
-                                    <p class="card-text"> Reducto Padel Center es un complejo deportivo de pádel en Montevideo, Uruguay. Ofrece canchas de
-                                        pádel de calidad para jugadores de todos los niveles. Además, cuenta con servicios como alquiler
-                                        de equipos, clases con entrenadores y organización de torneos. Es un lugar ideal para los
+                                    <p class="card-text"> Reducto Padel Center es un complejo deportivo de pádel en
+                                        Montevideo, Uruguay. Ofrece canchas de
+                                        pádel de calidad para jugadores de todos los niveles. Además, cuenta con
+                                        servicios como alquiler
+                                        de equipos, clases con entrenadores y organización de torneos. Es un lugar ideal
+                                        para los
                                         amantes del pádel en la ciudad.</p>
                                     <p><strong>Precio:</strong> $1900</p>
                                     <p><strong>Zona:</strong> Dr. Alfredo García Morales 1320</p>
@@ -102,11 +106,13 @@
                                 <img src="imagnes/canchasAbiertas.jpg" class="card-img-top" alt="Cancha de Padel 4">
                                 <div class="card-body">
                                     <h5 class="card-title">Cancha Boss Padel</h5>
-                                    <p class="card-text">Boss Padel es un complejo deportivo de pádel en Montevideo, Uruguay.
+                                    <p class="card-text">Boss Padel es un complejo deportivo de pádel en Montevideo,
+                                        Uruguay.
                                         Ofrece canchas de pádel de alta calidad para jugadores de todos los niveles.
                                         Además, cuenta con servicios como alquiler de equipos,
                                         clases con entrenadores profesionales y organización de torneos.
-                                        También dispone de una tienda especializada y una cafetería para relajarse después de los
+                                        También dispone de una tienda especializada y una cafetería para relajarse
+                                        después de los
                                         partidos.
                                         Boss Padel es el lugar ideal para los amantes del pádel en Montevideo,
                                         proporcionando una experiencia deportiva completa y de primer nivel.</p>
@@ -124,16 +130,39 @@
                                 <img src="imagnes/2024-04-13.png" class="card-img-top" alt="Cancha de Padel 5">
                                 <div class="card-body">
                                     <h5 class="card-title">Lagomar Padel Club</h5>
-                                    <p class="card-text">Lagomar Padel Club ofrece instalaciones de primer nivel para la práctica del pádel, incluyendo
-                                        canchas de última generación y un ambiente amigable. Además, organizan torneos y eventos para
-                                        jugadores de todos los niveles, cuentan con clases y entrenamiento personalizado, y disponen de
-                                        una tienda con equipamiento y accesorios. El club también ofrece servicios de alquiler de
+                                    <p class="card-text">Lagomar Padel Club ofrece instalaciones de primer nivel para la
+                                        práctica del pádel, incluyendo
+                                        canchas de última generación y un ambiente amigable. Además, organizan torneos y
+                                        eventos para
+                                        jugadores de todos los niveles, cuentan con clases y entrenamiento
+                                        personalizado, y disponen de
+                                        una tienda con equipamiento y accesorios. El club también ofrece servicios de
+                                        alquiler de
                                         canchas y facilidades para socios.</p>
                                     <p><strong>Precio:</strong> $2200</p>
                                     <p><strong>Zona:</strong>Av. del Country, 15000 Ciudad de la
                                         Costa</p>
                                     <button class="btn btn-primary"
                                         onclick="seleccionarCancha('Lagomar Padel Club')">Reserva de
+                                        Cancha</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                            <div class="card">
+                                <img src="imagnes/266206690_4528656837212387_5352426192334800099_n.jpg" class="card-img-top" alt="Cancha de Padel 6">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sale Padel</h5>
+                                    <p class="card-text">En Sale Padel, te ofrecemos lo mejor para disfrutar del pádel.
+                                        Nuestras canchas son de última generación y el ambiente es amigable. Organizamos
+                                        torneos y eventos para todos los niveles, y también ofrecemos clases y
+                                        entrenamiento personalizado. En nuestra tienda, encontrarás todo lo que
+                                        necesitas, desde equipamiento hasta accesorios. Además, puedes alquilar nuestras
+                                        canchas y contamos con facilidades exclusivas para nuestros socios.</p>
+                                    <p><strong>Precio:</strong> $1750</p>
+                                    <p><strong>Zona:</strong>Tomás Gomensoro 2915</p>
+                                    <button class="btn btn-primary"
+                                        onclick="seleccionarCancha('Sale Padel')">Reserva de
                                         Cancha</button>
                                 </div>
                             </div>
@@ -149,13 +178,14 @@
                         <h2>Reserva de Cancha</h2>
                         <form id="reserva-form">
                             <div class="mb-3">
-                                <label for="cancha" class="form-label" >Cancha:</label>
+                                <label for="cancha" class="form-label">Cancha:</label>
                                 <select id="cancha" name="cancha" class="form-select" required>
                                     <option value="World Padel Center Montevideo">World Padel Center Montevideo</option>
                                     <option value="Indoor Padel Montevideo">Indoor Padel Montevideo</option>
                                     <option value="Reducto Padel Center">Reducto Padel Center</option>
                                     <option value="Cancha Boss Padel">Cancha Boss Padel</option>
                                     <option value="Lagomar Padel Club">Lagomar Padel Club</option>
+                                    <option value="Sale Padel">Sale Padel</option>
                                 </select>
                             </div>
                             <div class="mb-3">
