--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -64,9 +64,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Indoor Padel Montevideo</h5>
                                     <p class="card-text">Indoor Padel Montevideo es un complejo deportivo en Montevideo,
-                                        Uruguay, especializado en pádel bajo techo. Ofrece canchas de pádel de alta
-                                        calidad en un entorno protegido de las condiciones climáticas, permitiendo a los
-                                        jugadores practicar y competir en cualquier época del año. El centro puede
+                                        Uruguay, especializado en pádel bajo techo. El centro puede
                                         proporcionar servicios como alquiler de equipos, clases con entrenadores
                                         profesionales y organización de torneos. Además, suele contar con comodidades
                                         como vestuarios y áreas de descanso para los jugadores. Indoor Padel Montevideo
@@ -87,12 +85,13 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Reducto Padel Center</h5>
                                     <p class="card-text"> Reducto Padel Center es un complejo deportivo de pádel en
-                                        Montevideo, Uruguay. Ofrece canchas de
-                                        pádel de calidad para jugadores de todos los niveles. Además, cuenta con
-                                        servicios como alquiler
+                                        Montevideo, Uruguay, especializado en pádel bajo techo. Ofrece canchas de
+                                        pádel de calidad para jugadores de todos los niveles. 
+                                        Además, cuenta con servicios como alquiler
                                         de equipos, clases con entrenadores y organización de torneos. Es un lugar ideal
                                         para los
-                                        amantes del pádel en la ciudad.</p>
+                                        amantes del pádel en la ciudad. Es el club perfecto, si sos competitivo. Todos los fin de semana se arman
+                                        torneos.</p>
                                     <p><strong>Precio:</strong> $1900</p>
                                     <p><strong>Zona:</strong> Dr. Alfredo García Morales 1320</p>
                                     <button class="btn btn-primary"
@@ -108,7 +107,6 @@
                                     <h5 class="card-title">Cancha Boss Padel</h5>
                                     <p class="card-text">Boss Padel es un complejo deportivo de pádel en Montevideo,
                                         Uruguay.
-                                        Ofrece canchas de pádel de alta calidad para jugadores de todos los niveles.
                                         Además, cuenta con servicios como alquiler de equipos,
                                         clases con entrenadores profesionales y organización de torneos.
                                         También dispone de una tienda especializada y una cafetería para relajarse
@@ -157,8 +155,7 @@
                                         Nuestras canchas son de última generación y el ambiente es amigable. Organizamos
                                         torneos y eventos para todos los niveles, y también ofrecemos clases y
                                         entrenamiento personalizado. En nuestra tienda, encontrarás todo lo que
-                                        necesitas, desde equipamiento hasta accesorios. Además, puedes alquilar nuestras
-                                        canchas y contamos con facilidades exclusivas para nuestros socios.</p>
+                                        necesitas, desde equipamiento hasta accesorios. Además, contamos con facilidades exclusivas para nuestros socios.</p>
                                     <p><strong>Precio:</strong> $1750</p>
                                     <p><strong>Zona:</strong>Tomás Gomensoro 2915</p>
                                     <button class="btn btn-primary"
