--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Canchas</title>
+    <title>Reserva de Canchas de Padel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container mt-5">
-        <h1>Reserva de Canchas</h1>
+        <h1>Reserva de Canchas de Padel</h1>
         <!-- Navegación -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -36,33 +37,159 @@
             <!-- Pestaña Seleccionar Cancha -->
             <div class="tab-pane fade show active" id="nav-seleccionar" role="tabpanel"
                 aria-labelledby="nav-seleccionar-tab">
-                <!-- Dentro de la sección "Selecciona una cancha" -->
-                <div class="mt-3">
-                    <h3>Selecciona una cancha</h3>
-                    <div class="card">
-                        <img src="imagnes/20190406_195247.jpg" class="card-img-top" alt="Imagen de la cancha">
-                        <div class="card-body">
-                            <h5 class="card-title">Reducto Padel Center</h5>
-                            <p class="card-text">Reducto Padel Center es un complejo deportivo de pádel en
-                                Montevideo, Uruguay, especializado en pádel bajo techo. Ofrece canchas de
-                                pádel de calidad para jugadores de todos los niveles.
-                                Además, cuenta con servicios como alquiler
-                                de equipos, clases con entrenadores y organización de torneos. Es un lugar ideal
-                                para los
-                                amantes del pádel en la ciudad. Es el club perfecto, si sos competitivo. Todos
-                                los fines de semana se arman
-                                torneos.</p>
-                            <p><strong>Precio:</strong> $1900</p>
-                            <p><strong>Zona:</strong> Dr. Alfredo García Morales 1320</p>
-                            <button class="btn btn-primary" onclick="seleccionarCancha('Reducto Padel Center')">Reservar
-                                Cancha</button>
+                <section id="listado-canchas" class="mt-4">
+                    <!-- Dentro de la sección "Selecciona una cancha" -->
+                    <div class="mt-3">
+                        <h2>Selecciona una cancha</h2>
+                        <div class="row">
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="imagnes/CHR_6337.jpg" class="card-img-top" alt="Cancha de Padel 1">
+                                    <div class="card-body">
+                                        <h3 class="card-title">World Padel Center Montevideo</h3>
+                                        <p class="card-text">El World Padel Center Montevideo es un complejo deportivo
+                                            especializado en pádel ubicado en Montevideo, Uruguay. Ofrece canchas de
+                                            pádel
+                                            de
+                                            alta calidad para jugadores de todos los niveles, desde principiantes hasta
+                                            profesionales. Además de las canchas, el centro puede brindar servicios como
+                                            entrenadores, alquiler de equipos, torneos y eventos especiales. Es un lugar
+                                            popular para los amantes del pádel en la ciudad, proporcionando un entorno
+                                            ideal
+                                            para jugar, aprender y disfrutar del deporte.</p>
+                                        <p><strong>Precio:</strong> $2100</p>
+                                        <p><strong>Zona:</strong> Estado de Israel 2800</p>
+                                        <button class="btn btn-primary"
+                                            onclick="seleccionarCancha('World Padel Center Montevideo')">Reserva de
+                                            Cancha</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="imagnes/20190406_195247.jpg" class="card-img-top" alt="Cancha de Padel 2">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Indoor Padel Montevideo</h3>
+                                        <p class="card-text">Indoor Padel Montevideo es un complejo deportivo en
+                                            Montevideo,
+                                            Uruguay, especializado en pádel bajo techo. Ofrece canchas de pádel de alta
+                                            calidad en un entorno protegido de las condiciones climáticas, permitiendo a
+                                            los
+                                            jugadores practicar y competir en cualquier época del año. El centro puede
+                                            proporcionar servicios como alquiler de equipos, clases con entrenadores
+                                            profesionales y organización de torneos. Además, suele contar con
+                                            comodidades
+                                            como vestuarios y áreas de descanso para los jugadores. Indoor Padel
+                                            Montevideo
+                                            es un lugar ideal para los amantes del pádel que buscan un espacio cómodo y
+                                            bien
+                                            equipado para disfrutar de este deporte.</p>
+                                        <p><strong>Precio:</strong> $1400</p>
+                                        <p><strong>Zona:</strong> Dr. Andrés Crovetto 4980</p>
+                                        <button class="btn btn-primary"
+                                            onclick="seleccionarCancha('Indoor Padel Montevideo')">Reserva de
+                                            Cancha</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="imagnes/imagen-Reducto-Padel-Center.webp" class="card-img-top"
+                                        alt="Cancha de Padel 3">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Reducto Padel Center</h3>
+                                        <p class="card-text"> Reducto Padel Center es un complejo deportivo de pádel en
+                                            Montevideo, Uruguay. Ofrece canchas de
+                                            pádel de calidad para jugadores de todos los niveles. Además, cuenta con
+                                            servicios como alquiler
+                                            de equipos, clases con entrenadores y organización de torneos. Es un lugar
+                                            ideal
+                                            para los
+                                            amantes del pádel en la ciudad.</p>
+                                        <p><strong>Precio:</strong> $1900</p>
+                                        <p><strong>Zona:</strong> Dr. Alfredo García Morales 1320</p>
+                                        <button class="btn btn-primary"
+                                            onclick="seleccionarCancha('Reducto Padel Center')">Reserva de
+                                            Cancha</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="imagnes/canchasAbiertas.jpg" class="card-img-top" alt="Cancha de Padel 4">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Cancha Boss Padel</h3>
+                                        <p class="card-text">Boss Padel es un complejo deportivo de pádel en Montevideo,
+                                            Uruguay.
+                                            Ofrece canchas de pádel de alta calidad para jugadores de todos los niveles.
+                                            Además, cuenta con servicios como alquiler de equipos,
+                                            clases con entrenadores profesionales y organización de torneos.
+                                            También dispone de una tienda especializada y una cafetería para relajarse
+                                            después de los
+                                            partidos.
+                                            Boss Padel es el lugar ideal para los amantes del pádel en Montevideo,
+                                            proporcionando una experiencia deportiva completa y de primer nivel.</p>
+                                        <p><strong>Precio:</strong> $2400</p>
+                                        <p><strong>Zona:</strong> Av. Liber Arce, 15800 Ciudad de la
+                                            Costa</p>
+                                        <button class="btn btn-primary"
+                                            onclick="seleccionarCancha('Cancha Boss Padel')">Reserva de
+                                            Cancha</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="imagnes/2024-04-13.png" class="card-img-top" alt="Cancha de Padel 5">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Lagomar Padel Club</h3>
+                                        <p class="card-text">Lagomar Padel Club ofrece instalaciones de primer nivel
+                                            para la
+                                            práctica del pádel, incluyendo
+                                            canchas de última generación y un ambiente amigable. Además, organizan
+                                            torneos y
+                                            eventos para
+                                            jugadores de todos los niveles, cuentan con clases y entrenamiento
+                                            personalizado, y disponen de
+                                            una tienda con equipamiento y accesorios. El club también ofrece servicios
+                                            de
+                                            alquiler de
+                                            canchas y facilidades para socios.</p>
+                                        <p><strong>Precio:</strong> $2200</p>
+                                        <p><strong>Zona:</strong>Av. del Country, 15000 Ciudad de la
+                                            Costa</p>
+                                        <button class="btn btn-primary"
+                                            onclick="seleccionarCancha('Lagomar Padel Club')">Reserva de
+                                            Cancha</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="imagnes/266206690_4528656837212387_5352426192334800099_n.jpg"
+                                        class="card-img-top" alt="Cancha de Padel 6">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Sale Padel</h3>
+                                        <p class="card-text">En Sale Padel, te ofrecemos lo mejor para disfrutar del
+                                            pádel.
+                                            Nuestras canchas son de última generación y el ambiente es amigable.
+                                            Organizamos
+                                            torneos y eventos para todos los niveles, y también ofrecemos clases y
+                                            entrenamiento personalizado. En nuestra tienda, encontrarás todo lo que
+                                            necesitas, desde equipamiento hasta accesorios. Además, puedes alquilar
+                                            nuestras
+                                            canchas y contamos con facilidades exclusivas para nuestros socios.</p>
+                                        <p><strong>Precio:</strong> $1750</p>
+                                        <p><strong>Zona:</strong>Tomás Gomensoro 2915</p>
+                                        <button class="btn btn-primary"
+                                            onclick="seleccionarCancha('Sale Padel')">Reserva de
+                                            Cancha</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!-- Botones adicionales para otras canchas -->
-                    <button class="btn btn-primary" onclick="seleccionarCancha('Cancha 2')">Cancha 2</button>
-                    <button class="btn btn-primary" onclick="seleccionarCancha('Cancha 3')">Cancha 3</button>
-                </div>
-
+                </section>
             </div>
             <!-- Pestaña Hacer Reserva -->
             <div class="tab-pane fade" id="nav-reserva" role="tabpanel" aria-labelledby="nav-reserva-tab">
@@ -72,9 +199,12 @@
                         <div class="mb-3">
                             <label for="cancha" class="form-label">Cancha</label>
                             <select class="form-select" id="cancha" name="cancha">
+                                <option value="World Padel Center Montevideo">World Padel Center Montevideo</option>
+                                <option value="Indoor Padel Montevideo">Indoor Padel Montevideo</option>
                                 <option value="Reducto Padel Center">Reducto Padel Center</option>
-                                <option value="Cancha 2">Cancha 2</option>
-                                <option value="Cancha 3">Cancha 3</option>
+                                <option value="Cancha Boss Padel">Cancha Boss Padel</option>
+                                <option value="Lagomar Padel Club">Lagomar Padel Club</option>
+                                <option value="Sale Padel">Sale Padel</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -82,8 +212,27 @@
                             <input type="date" class="form-control" id="fecha" name="fecha" required>
                         </div>
                         <div class="mb-3">
-                            <label for="hora" class="form-label">Hora</label>
-                            <input type="time" class="form-control" id="hora" name="hora" required>
+                            <label for="hora" class="form-label">Hora:</label>
+                            <select id="hora" name="hora" class="form-select" required>
+                                <option value="00:00">00:00</option>
+                                <option value="01:00">01:00</option>
+                                <option value="08:00">08:00</option>
+                                <option value="09:00">09:00</option>
+                                <option value="10:00">10:00</option>
+                                <option value="11:00">11:00</option>
+                                <option value="12:00">12:00</option>
+                                <option value="13:00">13:00</option>
+                                <option value="14:00">14:00</option>
+                                <option value="15:00">15:00</option>
+                                <option value="16:00">16:00</option>
+                                <option value="17:00">17:00</option>
+                                <option value="18:00">18:00</option>
+                                <option value="19:00">19:00</option>
+                                <option value="20:00">20:00</option>
+                                <option value="21:00">21:00</option>
+                                <option value="22:00">22:00</option>
+                                <option value="23:00">23:00</option>
+                            </select>
                         </div>
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
@@ -135,7 +284,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Modal title</h5>
+                    <h3 class="modal-title" id="modalTitle">Modal title</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modalBody">
