--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -16,10 +16,10 @@
     <div class="container2">
         <div class="user-info">
             <img class="avatar"
-                src="imagnes/sticker-png-person-icon-avatar-user-profile-icon-design-blog-face-silhouette-head.png"
+                src="imagnes/people-icon-design-avatar-icon-person-icons-people-icons-are-set-in-trendy-flat-style-user-icon-set-vector.jpg"
                 alt="">
             <div class="details">
-                <div>Mauro Orona</div>
+                <div>Usuario</div>
                 <div class="joined-date">Se unió en junio de 2024</div>
             </div>
         </div>
