waze sin errores

--- a/src/interface/index.html
+++ b/src/interface/index.html
@@ -20,7 +20,10 @@
                 alt="">
             <div class="details">
                 <div>Usuario</div>
-                <div class="joined-date">Se unió en junio de 2024</div>
+                <div class="joined-date">
+                    Se unió en junio de 2024
+                </div>
+                
             </div>
         </div>
     </div>
